--- a/style.css
+++ b/style.css
@@ -13,6 +13,6 @@
     max-width: 100%;
     max-height: 100%;
 }
-#player{
+#player, #layer1, #layer2, #layer3, #layer4, #layer5 {
     display: none;
 }
