--- a/style.css
+++ b/style.css
@@ -13,6 +13,6 @@
     max-width: 100%;
     max-height: 100%;
 }
-#player, #layer1, #layer2, #layer3, #layer4, #layer5 {
+#player, #layer1, #layer2, #layer3, #layer4, #layer5, #enemy_fly, #enemy_plant, #enemy_spider{
     display: none;
 }
