--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
     transform: translate(-50%, -50%);
     max-width: 100%;
     max-height: 100%;
+    font-family: 'Black Ops One', cursive;
 }
-#player, #layer1, #layer2, #layer3, #layer4, #layer5, #enemy_fly, #enemy_plant, #enemy_spider, #fire, #collisionAnnimation{
+#player, #layer1, #layer2, #layer3, #layer4, #layer5, #enemy_fly, #enemy_plant, #enemy_spider, #fire, #collisionAnnimation, #lives{
     display: none;
 }
